# FleetManager

./: .clang-format  .gitignore  CMakeLists.txt  FleetManager.sln  FleetManager.vcxproj  FleetManager.vcxproj.filters  README.md  Van.cpp  Van.h  demo_imgui.cpp  demo_main.cpp  imgui_main.cpp  imgui_ref_demos.h  main.cpp  utils.cpp  utils.h  vans_db.csv  wx_main.cpp
cmake/: Conan.cmake
db/: vans.csv
include/: Van.h  app.h  main.h  utils.h
include/FleetManager/: DataAccess.h  Date.h  IRentable.h  Utils.h  Van.h  app.h  imgui_app.h  utils.h
src/: DataAccess.cpp  Date.cpp  Utils.cpp  Van.cpp  app.cpp  imgui_app.cpp  main.cpp  utils.cpp  wx_app.cpp
test/: CMakeLists.txt  DataAccessTest.cpp  gtest_main.cpp
